gen3-ai/cluster-values/custom-objects/qag-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qag-agent
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qag-agent
  template:
    metadata:
      labels:
        app: qag-agent
    spec:
      containers:
        - name: agent
          image: 707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/qag-agent-demo-agent:test-main-integration
          imagePullPolicy: Always
          args:
            - "--port"
            - "$(AGENT_PORT)"
            - "--mcp-url"
            - "http://qag-mcp:$(MCP_PORT)/mcp"
            - "--model-config"
            - "model-config.yaml"
            - "--retries"
            - "3"
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: model-config
              mountPath: /agent/src/model-config.yaml
              subPath: model-config.yaml
              readOnly: true
      volumes:
        - name: model-config
          configMap:
            name: qag-agent-model-config
---
apiVersion: v1
kind: Service
metadata:
  name: qag-agent
  namespace: dev
spec:
  type: NodePort
  selector:
    app: qag-agent
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qag-mcp
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qag-mcp
  template:
    metadata:
      labels:
        app: qag-mcp
    spec:
      containers:
        - name: mcp
          image: 707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/qag-agent-demo-mcp:test-main-integration
          imagePullPolicy: IfNotPresent
          args:
            - "-t"
            - "streamable-http"
            - "-p"
            - "$(MCP_PORT)"
          ports:
            - name: http
              containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: qag-mcp
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: qag-mcp
  ports:
    - name: http
      port: 8001
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: revproxy-alb-old
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:837801696852:certificate/3dc72278-1dd1-4451-848e-bc1cd3f21d13
    alb.ingress.kubernetes.io/group.name: gen3-ai
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-FIPS-2023-04
    alb.ingress.kubernetes.io/tags: Environment=gen3-ai
    alb.ingress.kubernetes.io/wafv2-acl-arn: ""
    alb.ingress.kubernetes.io/inbound-cidrs: 205.208.120.0/22
spec:
  ingressClassName: alb
  rules:
  - host: ai.planx-pla.net
    http:
      paths:
      - backend:
          service:
            name: qag-agent
            port:
              number: 80
        path: /
        pathType: Prefix
